--- a/templates/weather.html
+++ b/templates/weather.html
@@ -19,7 +19,7 @@
                 <h2>{{ weather.city }}</h2>
             </div>
             <div class="card">
-                <p>Temperature: {{ weather.temperature }}°C</p>
+                <p>Temperature: {{ weather.temperature }}°F</p>
             </div>
             <div class="card">
                 <p>Description: {{ weather.description }}</p>
